--- a/2. exercise2.html
+++ b/2. exercise2.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+	<title>Exercise 2</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles/styles.css">
+</head>
 <body>
-<div id="accordion">
-    <h3>Section 1</h3>
-    <div>
-        <p>
-            Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-            ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-            amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-            odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-        </p>
-    </div>
-    <h3>Section 2</h3>
-    <div>
-        <p>
-            Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
-            purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
-            velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
-            suscipit faucibus urna.
-        </p>
-    </div>
-    <h3>Section 3</h3>
-    <div>
-        <p>
-            Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
-            Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
-            ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
-            lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
-        </p>
-        <ul>
-            <li>List item one</li>
-            <li>List item two</li>
-            <li>List item three</li>
-        </ul>
-    </div>
-    <h3>Section 4</h3>
-    <div>
-        <p>
-            Cras dictum. Pellentesque habitant morbi tristique senectus et netus
-            et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
-            faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
-            mauris vel est.
-        </p>
-        <p>
-            Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
-            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-            inceptos himenaeos.
-        </p>
-    </div>
-</div>
+	<div class="container">
+		<div id="accordion">
+		    <h3 data-toggle="collapse" data-target="#section-1">Section 1</h3>
+		    <div id="section-1" class="collapse show" data-parent="#accordion">
+			    <div class="card">
+			        <p>
+			            Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+			            ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+			            amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+			            odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+			        </p>
+			    </div>
+		    </div>
+		    <h3 data-toggle="collapse" data-target="#section-2">Section 2</h3>
+		    <div id="section-2" class="collapse" data-parent="#accordion">
+			    <div class="card">
+			        <p>
+			            Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+			            purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+			            velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
+			            suscipit faucibus urna.
+			        </p>
+			    </div>
+		    </div>
+		    <h3 data-toggle="collapse" data-target="#section-3">Section 3</h3>
+		    <div id="section-3" class="collapse" data-parent="#accordion">
+			    <div class="card">
+			        <p>
+			            Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
+			            Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
+			            ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
+			            lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
+			        </p>
+			        <ul>
+			            <li>List item one</li>
+			            <li>List item two</li>
+			            <li>List item three</li>
+			        </ul>
+			    </div>
+		    </div>
+		    <h3 class="collapsed" data-toggle="collapse" data-target="#section-4">Section 4</h3>
+		    <div id="section-4" class="collapse" data-parent="#accordion">
+			    <div class="card">
+			        <p>
+			            Cras dictum. Pellentesque habitant morbi tristique senectus et netus
+			            et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
+			            faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
+			            mauris vel est.
+			        </p>
+			        <p>
+			            Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
+			            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+			            inceptos himenaeos.
+			        </p>
+			    </div>
+		    </div>
+		</div>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </html>
