--- a/1. exercise1.html
+++ b/1. exercise1.html
@@ -18,7 +18,7 @@
 			</div>
 		</header>
 		<main class="container">
-			<ul>
+			<ul class="cards">
 				<li>
 					<div class="card">
 						<img src="http://via.placeholder.com/400x300">
